--- a/style.css
+++ b/style.css
@@ -33,9 +33,7 @@
     line-height: 260px;
     background-color: black;
     background-image: url("https://t1.gstatic.com/images?q=tbn:ANd9GcRfT4KQX6_fSTaH4kn3150-k7ROOINaDICbnfbVeJ9gA1pkgagw");
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
+    background-size:auto
   }
   
   
