--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     text-align: center;
     line-height: 260px;
     background-color: black;
-    background-image: url("https://t1.gstatic.com/images?q=tbn:ANd9GcRfT4KQX6_fSTaH4kn3150-k7ROOINaDICbnfbVeJ9gA1pkgagw");
+    background-image: url("https://t1.gstatic.cofile:///media/fuse/drivefs-74b01f42b5ce1da84f2e761213f16bbc/root/download%20(8).jpegm/images?q=tbn:ANd9GcRfT4KQX6_fSTaH4kn3150-k7ROOINaDICbnfbVeJ9gA1pkgagw");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     
