--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
     background-color: #4a10d1;
     padding: 10px 15px;
     width: 60%;
-      min-width: 200px;
-      max-width: 600px;
+    min-width: 200px;
+    max-width: 600px;
     font-family: fantasy;
+    border-radius: 8px;
   }
   .button3:hover{
     background-color: #8495e6;
+    border-radius: 8px;
     
   }
   
@@ -58,11 +60,13 @@
     color: black;
     font-family: fantasy;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border-radius: 8px;
   }
   
   .button:hover {
     background-color: #f7f3f3;
-      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    border-radius: 8px;
   
   }
   
@@ -81,9 +85,11 @@
     top: 10px;
     left: 10px;
     background-color: rgb(18, 207, 201);
+    border-radius: 8px;
   }
   .button2:hover{
     background-color: rgba(4, 70, 4, 0.475);
+    border-radius: 8px;
   }
   
   .button3{
@@ -94,10 +100,12 @@
     padding: 10px 15px;
     width: 60%;
     font-family: fantasy;
-      min-width: 200px;
-      max-width: 600px;
+    min-width: 200px;
+    max-width: 600px;
+    border-radius: 8px;
   }
   .button3:hover{
     background-color: #e3e3e3;
+    border-radius: 8px;
     
   }
