--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     font-size: 24px;
     padding: 14px 28px;
     background-color: #21126c;
-    color: black;
+    color: rgb(255, 255, 255);
     font-family: cursive;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     border-radius: 8px;
@@ -83,6 +83,7 @@
     padding: 14px 28px;
     top: 10px;
     left: 10px;
+    color: white;
     background-color: rgb(16, 105, 102);
     border-radius: 8px;
   }
@@ -101,8 +102,10 @@
     font-family: cursive;
     min-width: 200px;
     max-width: 600px;
+    color: white;
     border-radius: 8px;
   }
+
   .button3:hover{
     background-color: #e3e3e3;
     border-radius: 8px;
