--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     background-color: black;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    
+    background-image: url("img/nasa-rTZW4f02zY8-unsplash.jpg");
   }
   
   
